--- a/index.html
+++ b/index.html
@@ -785,9 +785,13 @@
 </li>
 	
 <li>	
-	<b>Conference Reviews:</b>
+	<b>Conference Presentations & Abstracts & Posters:</b>
 	<br>
-	IEEE Conference on Computer Vision and Pattern Recognition (CVPR’19-22)<br>
+	Journal for ImmunoTherapy of Cancer 2023<br>
+	Society for Immunotherapy of Cancer (SITC) 37th Annual Meeting (SITC 2022)<br>
+	Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) 2023<br>
+	2017 American Society of Clinical Oncology (ASCO) Annual Meeting<br>
+	13th International Gastric Cancer Congress (IGCC 2019)<br>
 	<p style="margin-top:3px"></p>		
 </li>
 
