--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <div style="height: 50px; overflow: auto;">
 <ul>
 	<li>
-		[12/2023] Two papers were accepted by AAAI 2024.
+		[12/2023] I will give a presentation at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming).
 	</li>
 </ul>
 <br>
