--- a/index.html
+++ b/index.html
@@ -154,8 +154,15 @@
 <div style="height: 50px; overflow: auto;">
 <ul>
 	<li>
-		[12/2023] I will give a presentation at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming).
+		[3/2024] I will give a presentation at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming).
 	</li>
+	<li>
+		[3/2024] Two papers were accepted by The Journal of Clinical Investigation by 2024.
+	</li>
+	<li>
+		[1/2024] Two papers were accepted by The Medical Image Analysis by 2024.
+	</li>
+	
 </ul>
 <br>
 </div>
