--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://howardchanth.github.io" target="_blank" style="color: #3a5779; text-decoration: none;">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (MD at SMU)(Master Student, 2022-)</td></tr>
 	</tbody>
 	</table>
 	<br>
