--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (MD at SMU)(Master Student, 2022-)</td></tr>
+		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (Master of Medicine at SMU)(Master Student, 2022-)</td></tr>
 	</tbody>
 	</table>
 	<br>
