--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </p>
 	
 <p style="color:red;">
-	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity (<a href="" target="_blank">Details</a>).
+	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity (<a href="https://www.linkedin.com/jobs/view/3844894965/?refId=a2pwnSbeRzuJ0lO%2BFxrO5g%3D%3D&trackingId=a2pwnSbeRzuJ0lO%2BFxrO5g%3D%3D" target="_blank">Details</a>).
 </p>
 <p style="color:red;">
 	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
