--- a/index.html
+++ b/index.html
@@ -124,12 +124,11 @@
   }
 </style>
 <p>
-	I am an assistant professor at The Wake Forest University School of Medicine. My research lies at the intersection of artificial intelligence and healthcare. 
+	I am a Tenure Track Assistant Professor at The Wake Forest University School of Medicine. My research lies at the intersection of artificial intelligence and precision oncology. 
 	We are dedicated to designing advanced machine learning algorithms for biomedical data analysis, primarily focusing on medical images, to improve medical decision-making.  
 	Specifically, we focus on: 
-	1) developing multimodal learning algorithms (e.g., multimodal foundation model) to integrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
-	2) building real-world learning systems to learn generalizable, trustworthy, and fair representations from imperfect medical data;
-	and 3) developing causality-driven learning algorithms to improve their interpretability and safety for healthcare problems.
+	1) Quantitative radiology imaging for treatment planning and evaluating response to cancer therapies, such as radiation therapy and immunotherapy; 
+	2) Computational pathology and H&E image analysis for important clinical tasks; and 3) Integration of multimodal data, including radiology, pathology, genomics, and clinical information..
 	
 </p>
 	
@@ -138,7 +137,7 @@
 </p>
 <p style="color:red;">
 	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
-	Welcome to drop me an email with your CV and transcripts.</a>.
+	Welcome to drop me an email with your CV.</a>.
 </p>
 
 
@@ -153,12 +152,12 @@
 <div style="height: 100px; overflow: auto;">
 <ul>
 	<li>
-		[3/2024] I will give a presentation at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming).
+		[3/2024] I will give a talk about "Artificial Intelligence & Imaging for Precision Oncology” at Gustave Roussy & University of Paris-Saclay, Paris, France.
 	</li>
 </ul>
 <ul>
 	<li>
-		[3/2024] Two papers were accepted by The Journal of Clinical Investigation by 2024.
+		[3/2024] One paper was accepted by The Journal of Clinical Investigation by 2024.
 	</li>
 </ul>
 <ul>
