--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div style="height: 100px; overflow: auto;">
 <ul>
 	<li>
-		[3/2024] I will give a talk about "Artificial Intelligence & Imaging for Precision Oncology” at Gustave Roussy & University of Paris-Saclay, Paris, France.
+		[3/2024] I gave a talk about "Artificial Intelligence & Imaging for Precision Oncology” at Gustave Roussy & University of Paris-Saclay, Paris, France.
 	</li>
 </ul>
 <ul>
