--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 					Department of Radiation Oncology<br>
 					Wake Forest University School of Medicine<br>
 					Winston Salem<br>
-					North Carolina, USA<br>
+					North Carolina 27157<br>
 					USA<br>
 					<br>
 					Email: yumjiang@wakehealth.edu
 			
 				</p>
-			</td>
+			https://scholar.google.com/citations?hl=en&user=FxBBKhoAAAAJ&view_op=list_works&sortby=pubdate</td>
 			<td>
 				<img src="https://jiangymbest.github.io/5a2cb73c1450e1b64b70f266ae6edc8.jpg" border="0" width="200"><br>
 			</td>
