--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					Email: yumjiang@wakehealth.edu
 			
 				</p>
-			https://scholar.google.com/citations?hl=en&user=FxBBKhoAAAAJ&view_op=list_works&sortby=pubdate</td>
+
 			<td>
 				<img src="https://jiangymbest.github.io/5a2cb73c1450e1b64b70f266ae6edc8.jpg" border="0" width="200"><br>
 			</td>
@@ -716,7 +716,7 @@
 <ul>
 	<li>
 		<b>Artificial Intelligence and Imaging for Precision Medicine</b> <br>
-		at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024 (incoming). <br>
+		at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024. <br>
  		at the 10th CLASSIC conference, Guangzhou, China, December 2023. <br>
   		at Ganzhou Reming Hospital, Ganzhou, China, November 2023. <br>
   		at Southern Medical University, Guangzhou, China, November 2023. <br>
@@ -864,7 +864,7 @@
 <div id="teaching">
 <h2 id="Teaching">Teaching</h2>
 <style>
-  #Teaching {
+  # Member {
     color: #527BBD;
     border-bottom: 1px solid grey;
   }
@@ -872,7 +872,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2023 Spring</td><td>STAT8021 Big Data Analytics</td>
+			<td> </td>
 		</tr>
 	</tbody>
 </table>
