--- a/index.html
+++ b/index.html
@@ -164,7 +164,16 @@
 	<li>
 		[1/2024] Two papers were accepted by The Medical Image Analysis by 2024.
 	</li>
-	
+</ul>
+<ul>
+	<li>
+		[10/2023] One paper was accepted by The Journal for ImmunoTherapy of Cancer.
+	</li>	
+</ul>
+<ul>
+	<li>
+		[8/2023] One paper was published in Cell Reports Medicine.
+	</li>	
 </ul>
 <br>
 </div>
