--- a/index.html
+++ b/index.html
@@ -870,15 +870,15 @@
 <br>
 </div>
 
-<div id="teaching">
-<h2 id="Teaching">Teaching</h2>
+<div id="Member">
+<h2 id="Member">Member</h2>
 <style>
   # Member {
     color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
-<table id="tbTeaching" border="0" width="100%">
+<table id="tbMember" border="0" width="100%">
 	<tbody>
 		<tr>
 			<td> </td>
