--- a/index.html
+++ b/index.html
@@ -870,10 +870,10 @@
 <br>
 </div>
 
-<div id="Member">
-<h2 id="Member">Member</h2>
+<div id="Team">
+<h2 id="Team">Team</h2>
 <style>
-  # Member {
+  # Team {
     color: #527BBD;
     border-bottom: 1px solid grey;
   }
