--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
 		[8/2023] One paper was published in Cell Reports Medicine.
 	</li>	
 </ul>
+	<ul>
+	<li>
+		[8/2023] One paper was published in Nature Communications.
+	</li>	
+</ul>
 <br>
 </div>
 <div id="experience">
