--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 <div style="height: 100px; overflow: auto;">
 <ul>
 	<li>
+		[4/2024] At this year's AACR 2024 conference in sunny San Diego, California, our team is thrilled to showcase two pioneering poster presentations: a Computational Approach for H&E Image Analysis and Prognosis Evaluation, and Generative AI for Virtual Pathological Staining. 
+	</li>
+</ul>
+	<li>
 		[3/2024] I gave a talk about "Artificial Intelligence & Imaging for Precision Oncology” at Gustave Roussy & University of Paris-Saclay, Paris, France.
 	</li>
 </ul>
