--- a/index.html
+++ b/index.html
@@ -249,6 +249,12 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://academic.oup.com/jnci/article/116/4/555/7429400" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
+		Rasoul Sali, <b>Yuming Jiang</b>, Armin Attaranzadeh, Brittany Holmes, Ruijiang Li.<br>
+		<em>Journal of the National Cancer Institute</em>, 2024.</br>
+	</li>
+	<ul>
+	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300258X?via%3Dihub" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
 		Jingjing Dai, Guoya Dong, Chulong Zhang, Wenfeng He, Lin Liu, Tangsheng Wang, <b>Yuming Jiang</b>, Wei Zhao, Xiang Zhao, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Medical Image Analysis</em>, 2024.</br>
@@ -266,12 +272,7 @@
 
 	
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
-	<ul>
-	<li>
-		<a href="https://academic.oup.com/jnci/advance-article-abstract/doi/10.1093/jnci/djad243/7429400" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
-		Rasoul Sali, <b>Yuming Jiang</b>, Armin Attaranzadeh, Brittany Holmes, Ruijiang Li.<br>
-		<em>Journal of the National Cancer Institute</em>, 2023.</br>
-	</li>
+	
 	</ul>
 	<ul>
 	<li>
