--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 	</li>
 	</ul>
 	
-	<p><font face="Arial" size="4"><b>Before 2020</b></font></p> 
+	<p><font face="Arial" size="4"><b>2020</b></font></p> 
 	<ul>	
 	<li>
 		<a href="https://www.mdpi.com/2072-6694/12/12/3562" target="_blank">Single-cell spatial analysis of tumor and immune microenvironment on whole-slide image reveals hepatocellular carcinoma subtypes</a><br>
@@ -534,8 +534,12 @@
 		<em>Journal of Cancer</em>, 2020.</br>
 	</li>
         </ul>
-	<ul>	
+	
+	<p><font face="Arial" size="4"><b>Before 2019</b></font></p>
+
+	<ul>
 	<li>
+	
 		<a href="https://aacrjournals.org/cancerimmunolres/article/7/12/2065/469491/Tumor-Immune-Microenvironment-and-Chemosensitivity" target="_blank">Tumor immune microenvironment and chemosensitivity signature for predicting response to chemotherapy in gastric cancer</a><br>
 		<b>Yuming Jiang</b>, Jingjing Xie, Weicai Huang, Hao Chen, Sujuan Xi, Zhen Han, Lei Huang, Tian Lin, Li-Ying Zhao, Yan-Feng Hu, Jiang Yu, Shi-Rong Cai, Tuanjie Li, Guoxin Li.<br>
 		<em>Cancer immunology research</em>, 2019.</br>
