--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 	</li>
         </ul>
 	
-	<p><font face="Arial" size="4"><b>Before 2019</b></font></p>
+	<p><font face="Arial" size="4"><b>2019</b></font></p>
 
 	<ul>
 	<li>
@@ -580,6 +580,9 @@
 		<em>Journal of Cancer</em>, 2019.</br>
 	</li>
 	</ul>
+	
+	<p><font face="Arial" size="4"><b>Before 2018</b></font></p>
+	
 	<ul>	
 	<li>
 		<a href="https://aacrjournals.org/clincancerres/article/24/22/5574/81041/Immunomarker-Support-Vector-Machine-Classifier-for" target="_blank">Immunomarker support vector machine classifier for prediction of gastric cancer survival and adjuvant chemotherapeutic benefit</a><br>
