--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[4/2024] One paper was accepted by The Journal for ImmunoTherapy of Cancer (IF: 10.9). Title: Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer.
+	</li>
+</ul>
+<ul>
+	<li>
 		[4/2024] At this year's AACR 2024 conference in sunny San Diego, California, our team is thrilled to showcase two pioneering poster presentations: a Computational Approach for H&E Image Analysis and Prognosis Evaluation, and Generative AI for Virtual Pathological Staining. 
 	</li>
 </ul>
@@ -163,7 +168,7 @@
 </ul>
 <ul>
 	<li>
-		[3/2024] One paper was accepted by The Journal of Clinical Investigation by 2024.
+		[3/2024] One paper was accepted by The Journal of Clinical Investigation (IF: 15.9). 
 	</li>
 </ul>
 <ul>
@@ -173,17 +178,17 @@
 </ul>
 <ul>
 	<li>
-		[10/2023] One paper was accepted by The Journal for ImmunoTherapy of Cancer.
+		[10/2023] One paper was accepted by The Journal for ImmunoTherapy of Cancer (IF: 10.9).
 	</li>	
 </ul>
 <ul>
 	<li>
-		[8/2023] One paper was published in Cell Reports Medicine.
+		[8/2023] One paper was published in Cell Reports Medicine (IF: 14.3).
 	</li>	
 </ul>
 	<ul>
 	<li>
-		[8/2023] One paper was published in Nature Communications.
+		[8/2023] One paper was published in Nature Communications (IF: 16.6).
 	</li>	
 </ul>
 <br>
