--- a/index.html
+++ b/index.html
@@ -238,10 +238,17 @@
 	</ul>
 -->
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
-
-	
+      
 	<ul>
 	<li>
+		<a href="https://jitc.bmj.com/content/12/5/e008927?rss=1" target="_blank">Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer</a><br>
+		Zhen Han, Zhicheng Zhang, Xianqi Yang, Zhe Li, Shengtian Sang, Md Tauhidul Islam, Alyssa A Guo, Zihan Li, Xiaoyan Wang, Jing Wang, Taojun Zhang, Zepang Sun, Lequan Yu, Wei Wang, Wenjun Xiong, Guoxin Li, and <b>Yuming Jiang</b>.<br>
+		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024.</br>
+	</li>
+	</ul>	
+	<ul>
+	<li>
+	
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0895611124000132?via%3Dihub" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
 		Lin Liu, Xinxin Fan, Haoyang Liu, Chulong Zhang, Weibin Kong, Jingjing Dai, <b>Yuming Jiang</b>, Yaoqin Xie, Xiaokun Liang.<br>
 		<em>Computerized Medical Imaging and Graphics</em>, 2024.</br>
