--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[5/2024] One project was supported by the American Cancer Society.
+	</li>
+</ul>
+<ul>
+	<li>
 		[4/2024] One paper was accepted by The Journal for ImmunoTherapy of Cancer (IF: 10.9). Title: Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer.
 	</li>
 </ul>
