--- a/index.html
+++ b/index.html
@@ -198,10 +198,14 @@
 </ul>
 </ul>
 	</ul>
+
 </ul>
+
 <br>
+
 </div>
 
+	
 <div id="publications">
 <h2 id="SelectedPublications">Selected Publications [<a href="https://scholar.google.com/citations?hl=en&user=FxBBKhoAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>]</h2>
 <style>
@@ -861,6 +865,7 @@
 	Journal of Investigative Surgery <br>
 	International Immunopharmacology <br>
 	International Journal of Molecular Medicine <br>
+	IEEE Transactions on Medical Imaging <br>
 	The Clinical Respiratory Journal <br>
 	Gastroenterology Research and Practice <br>
 	Experimental and Therapeutic Medicine <br>
