--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </ul>
 <ul>
 	<li>
-		[5/2024] One project was supported by the American Cancer Society.
+		[5/2024] One lung cancer project was awarded funding by the American Cancer Society.
 	</li>
 </ul>
 <ul>
