--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
 </ul>
 <ul>
 	<li>
+		[2/2024] I gave a talk about "Artificial Intelligence & Imaging for Precision Oncology” at the Brain Tumor Center of Excellence Monthly Meeting, Wake Forest University. 
+	</li>
+</ul>
+<ul>
+	<li>
 		[1/2024] Two papers were accepted by The Medical Image Analysis by 2024.
 	</li>
 </ul>
