--- a/index.html
+++ b/index.html
@@ -738,6 +738,7 @@
 	<li>
 		<b>Artificial Intelligence and Imaging for Precision Medicine</b> <br>
 		at Gustave Roussy & University of Paris-Saclay, Paris, France, March 2024. <br>
+		at the Brain Tumor Center of Excellence Monthly Meeting, Wake Forest University, Feb 2024. <br>
  		at the 10th CLASSIC conference, Guangzhou, China, December 2023. <br>
   		at Ganzhou Reming Hospital, Ganzhou, China, November 2023. <br>
   		at Southern Medical University, Guangzhou, China, November 2023. <br>
