--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[6/2024] One paper was accepted by International Journal of Surgery (IF: 15.3). 
+</ul>
+
+<ul>
+	<li>
 		[5/2024] One lung cancer project was awarded funding by the American Cancer Society.
 	</li>
 </ul>
