--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	<li>
 		<a href="https://journals.lww.com/international-journal-of-surgery/abstract/9900/digital_assessment_of_tertiary_lymphoid_structures.1684.aspx">Digital assessment of tertiary lymphoid structures and therapeutic responses in gastric cancer: A multi-centric retrospective study</a><br>
 		Chen, Yan MD; Sun, Zepang MD, PhD; Yin, Junmei MD; Ahmad, M. Usman MD; Zhou, Zixia PhD; Feng, Wanying MD, PhD; Yang, Fan PhD; Zhou, Kangneng PhD; Xie, Jingjing PhD; Bie, Caiqun MD, PhD; Chen, Hongzhuan MD; and <b> Jiang, Yuming MD, PhD</b>.<br>
-		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024.</br>
+		<em>International Journal of Surgery </em>, 2024.</br>
 	</li>
 	</ul>
 	<ul>
