--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
 	<li>
 		<a href="https://journals.lww.com/international-journal-of-surgery/abstract/9900/digital_assessment_of_tertiary_lymphoid_structures.1684.aspx">Digital assessment of tertiary lymphoid structures and therapeutic responses in gastric cancer: A multi-centric retrospective study</a><br>
 		Chen, Yan MD; Sun, Zepang MD, PhD; Yin, Junmei MD; Ahmad, M. Usman MD; Zhou, Zixia PhD; Feng, Wanying MD, PhD; Yang, Fan PhD; Zhou, Kangneng PhD; Xie, Jingjing PhD; Bie, Caiqun MD, PhD; Chen, Hongzhuan MD; and <b> Jiang, Yuming MD, PhD</b>.<br>
-		<em>International Journal of Surgery </em>, 2024.</br>
+		<em>International Journal of Surgery </em>, 2024. (Impact Factor: 15.3)</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://jitc.bmj.com/content/12/5/e008927?rss=1" target="_blank">Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer</a><br>
 		Zhen Han, Zhicheng Zhang, Xianqi Yang, Zhe Li, Shengtian Sang, Md Tauhidul Islam, Alyssa A Guo, Zihan Li, Xiaoyan Wang, Jing Wang, Taojun Zhang, Zepang Sun, Lequan Yu, Wei Wang, Wenjun Xiong, Guoxin Li, and <b>Yuming Jiang</b>.<br>
-		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024.</br>
+		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024. (Impact Factor: 10.9)</br>
 	</li>
 	</ul>	
 	<ul>
@@ -257,7 +257,7 @@
 	<li>
 		<a href="https://www.jci.org/articles/view/175834" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
 		Zepang Sun, Taojun Zhang, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, <b>Yuming Jiang</b>.<br>
-		<em>Journal of Clinical Investigation</em>, 2024.</br>
+		<em>Journal of Clinical Investigation</em>, 2024. (Impact Factor: 15.9) </br>
 	</li>
 	</ul>
 	<ul>
