--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 	<li>
 		<a href="https://academic.oup.com/jnci/article/116/4/555/7429400" target="_blank">Morphological diversity of cancer cells predicts prognosis across tumor types</a><br>
 		Rasoul Sali, <b>Yuming Jiang</b>, Armin Attaranzadeh, Brittany Holmes, Ruijiang Li.<br>
-		<em>Journal of the National Cancer Institute</em>, 2024.</br>
+		<em>Journal of the National Cancer Institute</em>, 2024. (Impact Factor: 10.3) </br>
 	</li>
 	</ul>
 	
@@ -291,7 +291,7 @@
 	<li>
 		<a href="https://jitc.bmj.com/content/11/Suppl_1/A1434" target="_blank">1291 Multi-modal deep learning integrating radiology and pathology images to predict cancer immunotherapy response: a retrospective multi-cohort study</a><br>
 		<b>Yuming Jiang</b>, Zhe Li, Ruijiang Li.<br>
-		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2023. </br>
 	</li>
 	</ul>
 	<ul>
@@ -326,14 +326,14 @@
 	<li>
 		<a href="https://www.cell.com/cell-reports-medicine/pdf/S2666-3791(23)00299-9.pdf" target="_blank">Non-invasive tumor microenvironment evaluation and treatment response prediction in gastric cancer using deep learning radiomics</a><br>
 		<b>Yuming Jiang</b>, Kangneng Zhou, Zepang Sun, Hongyu Wang, Jingjing Xie, Taojun Zhang, Shengtian Sang, Md Tauhidul Islam, Jen-Yeu Wang, Chuanli Chen, Qingyu Yuan, Sujuan Xi, Tuanjie Li, Yikai Xu, Wenjun Xiong, Wei Wang, Guoxin Li, Ruijiang Li.<br>
-		<em>Cell Reports Medicine</em>, 2023.</br>
+		<em>Cell Reports Medicine</em>, 2023. (Impact Factor: 14.3) </br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.nature.com/articles/s41467-023-40890-x" target="_blank">Biology-guided deep learning predicts prognosis and cancer immunotherapy response</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Wei Wang, Weicai Huang, Chuanli Chen, Sujuan Xi, M Usman Ahmad, Yulan Ren, Shengtian Sang, Jingjing Xie, Jen-Yeu Wang, Wenjun Xiong, Tuanjie Li, Zhen Han, Qingyu Yuan, Yikai Xu, Lei Xing, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
-		<em>Nature Communications</em>, 2023.</br>
+		<em>Nature Communications</em>, 2023. (Impact Factor: 16.6) </br>
 	</li>
 	</ul>
 	<ul>
@@ -347,7 +347,7 @@
 	<li>
 		<a href="https://journals.lww.com/international-journal-of-surgery/fulltext/2023/07000/Noninvasive_imaging_evaluation_of_peritoneal.20.aspx" target="_blank">Noninvasive imaging evaluation of peritoneal recurrence and chemotherapy benefit in gastric cancer after gastrectomy: a multicenter study</a><br>
 		Zepang Sun, Wei Wang, Weicai Huang, Taojun Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Yanfeng Hu, Jiang Yu, Hao Liu, Lequan Yu, Yikai Xu, Guoxin Li, <b>Yuming Jiang</b>.<br>
-		<em>International Journal of Surgery</em>, 2023.</br>
+		<em>International Journal of Surgery</em>, 2023.(Impact Factor: 15.3) </br>
 	</li>
 	</ul>
 	<ul>
@@ -361,7 +361,7 @@
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S2095927323001135?via%3Dihub" target="_blank">Artificial intelligence for clinical oncology: current status and future outlook</a><br>
 		<b>Yuming Jiang</b>, Ruijiang Li, Guoxin Li.<br>
-		<em>Science bulletin</em>, 2023.</br>
+		<em>Science bulletin</em>, 2023.(Impact Factor: 18.9) </br>
 	</li>
 	</ul>
 	<ul>
@@ -382,7 +382,7 @@
 	<li>
 		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10668251/" target="_blank">Non-invasive CT imaging biomarker to predict immunotherapy response in gastric cancer: a multicenter study</a><br>
 		Weicai Huang, Wenjun Xiong, Lei Tang, Chuanli Chen, Qingyu Yuan, Cheng Zhang, Kangneng Zhou, Zepang Sun, Taojun Zhang, Zhen Han, Hao Feng, Xiaokun Liang, Yonghong Zhong, Haijun Deng, Lequan Yu, Yikai Xu, Wei Wang, Lin Shen, Guoxin Li, <b>Yuming Jiang</b>.<br>
-		<em>Journal for ImmunoTherapy of Cancer</em>, 2023.</br>
+		<em>Journal for ImmunoTherapy of Cancer</em>, 2023. (Impact Factor: 10.9) </br>
 	</li>
 	</ul>
 	<ul>
@@ -405,7 +405,7 @@
 	<li>
 		<a href="https://www.nature.com/articles/s41467-022-32816-w" target="_blank">Noninvasive imaging of the tumor immune microenvironment correlates with response to immunotherapy in gastric cancer</a><br>
 		Weicai Huang, <b>Yuming Jiang</b>, Wenjun Xiong, Zepang Sun, Chuanli Chen, Qingyu Yuan, Kangneng Zhou, Zhen Han, Hao Feng, Hao Chen, Xiaokun Liang, Shitong Yu, Yanfeng Hu, Jiang Yu, Yan Chen, Liying Zhao, Hao Liu, Zhiwei Zhou, Wei Wang, Wei Wang, Yikai Xu, Guoxin Li.<br>
-		<em>Nature Communications</em>, 2022.</br>
+		<em>Nature Communications</em>, 2022.(Impact Factor: 16.6) </br>
 	</li>
 	</ul>
 	<ul>
@@ -426,7 +426,7 @@
 	<li>
 		<a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(22)00040-1/fulltext" target="_blank">Predicting peritoneal recurrence and disease-free survival from CT images in gastric cancer with multitask deep learning: a retrospective study</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Qingyu Yuan, Wei Wang, Hongyu Wang, Tuanjie Li, Weicai Huang, Jingjing Xie, Chuanli Chen, Zepang Sun, Jiang Yu, Yikai Xu, George A Poultsides, Lei Xing, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
-		<em>The Lancet Digital Health</em>, 2022.</br>
+		<em>The Lancet Digital Health</em>, 2022.(Impact Factor: 36.6) </br>
 	</li>
 	</ul>
 	<ul>
@@ -449,7 +449,7 @@
 	<li>
 		<a href="https://journals.lww.com/annalsofsurgery/abstract/2021/12000/development_and_validation_of_a_deep_learning_ct.415.aspx" target="_blank">Development and validation of a deep learning CT signature to predict survival and chemotherapy benefit in gastric cancer: a multicenter, retrospective study</a><br>
 		<b>Yuming Jiang</b>, Cheng Jin, Heng Yu, Jia Wu, Chuanli Chen, Qingyu Yuan, Weicai Huang, Yanfeng Hu, Yikai Xu, Zhiwei Zhou, George A Fisher Jr, Guoxin Li, Ruijiang Li.<br>
-		<em>Annals of surgery</em>, 2021.</br>
+		<em>Annals of surgery</em>, 2021. (Impact Factor: 13.787) </br>  This work was reported by Reuters Health, ”CT signature predicts survival, chemotherapy benefit in gastric cancer”. Annals of Surgery, the world's most highly referenced surgery journal, is the official journal of American Surgical Association and European Surgical Association.
 	</li>
 	</ul>
 	<ul>
@@ -463,7 +463,7 @@
 	<li>
 		<a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(21)00065-0/fulltext" target="_blank">Radiographical assessment of tumour stroma and treatment outcomes using deep learning: a retrospective, multicohort study</a><br>
 		<b>Yuming Jiang</b>, Xiaokun Liang, Zhen Han, Wei Wang, Sujuan Xi, Tuanjie Li, Chuanli Chen, Qingyu Yuan, Na Li, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, George A Poultsides, Guoxin Li, Ruijiang Li.<br>
-		<em>The Lancet Digital Health</em>, 2021.</br>
+		<em>The Lancet Digital Health</em>, 2021. (Impact Factor: 36.6) </br>
 	</li>
 	</ul>
 	<ul>
