--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/10086562" target="_blank">Survival Prediction via Hierarchical Multimodal Co-Attention Transformer: A Computational Histology-Radiology Solution</a><br>
 		Zhe Li, <b>Yuming Jiang</b>, Mengkang Lu, Ruijiang Li, Yong Xia.<br>
-		<em>IEEE Transactions on Medical Imaging</em>, 2023.</br>
+		<em>IEEE Transactions on Medical Imaging</em>, 2023. (Impact Factor: 11.037) </br>
 	</li>
 	</ul>
 	<ul>
@@ -375,7 +375,7 @@
 	<li>
 		<a href="https://jamanetwork.com/journals/jamanetworkopen/article-abstract/2800715" target="_blank">Development and Validation of a Machine Learning Model for Detection and Classification of Tertiary Lymphoid Structures in Gastrointestinal Cancers</a><br>
 		Zhe Li, <b>Yuming Jiang</b>, Bailiang Li, Zhen Han, Jeanne Shen, Yong Xia, Ruijiang Li.<br>
-		<em>JAMA Network Open</em>, 2023.</br>
+		<em>JAMA Network Open</em>, 2023. (Impact Factor: 13.353)</br>
 	</li>
 	</ul>
 	<ul>
@@ -419,14 +419,14 @@
 	<li>
 		<a href="https://www.nature.com/articles/s41419-022-05118-8" target="_blank">PAK6 promotes homologous-recombination to enhance chemoresistance to oxaliplatin through ATR/CHK1 signaling in gastric cancer</a><br>
 		Weicai Huang, Zhen Han, Zepang Sun, Hao Feng, Liying Zhao, Qingyu Yuan, Chuanli Chen, Shitong Yu, Yanfeng Hu, Jiang Yu, Hao Liu, Guoxin Li, <b>Yuming Jiang</b>.<br>
-		<em>Cell Death & Disease</em>, 2022.</br>
+		<em>Cell Death & Disease</em>, 2022. (Impact Factor: 9.6) </br> 
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.thelancet.com/journals/landig/article/PIIS2589-7500(22)00040-1/fulltext" target="_blank">Predicting peritoneal recurrence and disease-free survival from CT images in gastric cancer with multitask deep learning: a retrospective study</a><br>
 		<b>Yuming Jiang</b>, Zhicheng Zhang, Qingyu Yuan, Wei Wang, Hongyu Wang, Tuanjie Li, Weicai Huang, Jingjing Xie, Chuanli Chen, Zepang Sun, Jiang Yu, Yikai Xu, George A Poultsides, Lei Xing, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
-		<em>The Lancet Digital Health</em>, 2022.(Impact Factor: 36.6) </br>
+		<em>The Lancet Digital Health</em>, 2022. (Impact Factor: 36.6) </br>
 	</li>
 	</ul>
 	<ul>
@@ -470,7 +470,7 @@
 	<li>
 		<a href="https://academic.oup.com/bjs/article/108/5/542/6287163?login=false" target="_blank">Deep learning analysis of the primary tumour and the prediction of lymph node metastases in gastric cancer</a><br>
 		C Jin, <b>Y Jiang</b>, H Yu, W Wang, B Li, C Chen, Q Yuan, Y Hu, Y Xu, Z Zhou, G Li, R Li.<br>
-		<em>British Journal of Surgery</em>, 2021.</br>
+		<em>British Journal of Surgery</em>, 2021.(Impact Factor: 9.6) </br>
 	</li>
 	</ul>
 	<ul>
@@ -484,7 +484,7 @@
 	<li>
 		<a href="https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2774582" target="_blank">Noninvasive prediction of occult peritoneal metastasis in gastric cancer using deep learning</a><br>
 		<b>Yuming Jiang</b>, Xiaokun Liang, Wei Wang, Chuanli Chen, Qingyu Yuan, Xiaodong Zhang, Na Li, Hao Chen, Jiang Yu, Yaoqin Xie, Yikai Xu, Zhiwei Zhou, Guoxin Li, Ruijiang Li.<br>
-		<em>JAMA network open</em>, 2021.</br>
+		<em>JAMA network open</em>, 2021. (Impact Factor: 13.353) </br>
 	</li>
 	</ul>
 	
@@ -521,7 +521,7 @@
 	<li>
 		<a href="https://www.annalsofoncology.org/article/S0923-7534(20)36382-1/fulltext" target="_blank">Noninvasive imaging evaluation of tumor immune microenvironment to predict outcomes in gastric cancer</a><br>
 		<b>Y Jiang</b>, H Wang, J Wu, C Chen, Q Yuan, W Huang, T Li, S Xi, Y Hu, Z Zhou, Y Xu, G Li, R Li.<br>
-		<em>Annals of Oncology</em>, 2020.</br>
+		<em>Annals of Oncology</em>, 2020. (Impact Factor: 50.6).</br>  Annals of Oncology, the official Journal of the European Society for Medical Oncology (ESMO) and the Japanese Society of Medical Oncology (JSMO).
 	</li>
         </ul>
 	<ul>	
@@ -612,7 +612,7 @@
 	<li>
 		<a href="https://journals.lww.com/annalsofsurgery/abstract/2018/03000/immunoscore_signature__a_prognostic_and_predictive.20.aspx" target="_blank">ImmunoScore signature: a prognostic and predictive tool in gastric cancer</a><br>
 		<b>Yuming Jiang</b>, QI Zhang, Yanfeng Hu, Tuanjie Li, Jiang Yu, Liying Zhao, Gengtai Ye, Haijun Deng, Tingyu Mou, Shirong Cai, Zhiwei Zhou, Hao Liu, Guihua Chen, Guoxin Li, Xiaolong Qi.<br>
-		<em>Annals of surgery</em>, 2018.</br>
+		<em>Annals of surgery</em>, 2018. (Impact Factor: 9.476) </br>  This article is highlighted in an accompanying Comment published in the The Lancet Oncology https://doi.org/10.1016/S1470-2045(17)30008-6.  </br>  Annals of Surgery, the world's most highly referenced surgery journal, is the official journal of American Surgical Association and European Surgical Association.
 	</li>
 	</ul>
 	<ul>	
