--- a/index.html
+++ b/index.html
@@ -703,15 +703,15 @@
 <br>
 </div>
 
-<div id="students">
-<h2 id="Students">Students</h2>
+<div id="Members">
+<h2 id="Members">Members</h2>
 <style>
-  #Students {
+  #Members {
     color: #527BBD;
     border-bottom: 1px solid grey;
   }
 </style>
-	<b>Current Students:</b>
+	<b>Current Members:</b>
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
