--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a href="#">Home</a>
         <a href="#experience">Experience</a>
         <a href="#publications">Publications</a>
-        <a href="#students">Students</a>
+        <a href="#Members">Members</a>
         <a href="#service">Service</a>
         <a href="#teaching">Teaching</a>
         <a href="">CV</a>
