--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 </ul>
 <ul>
 	<li>
+		[7/2024] One paper was accepted by The European Conference on Computer Vision (ECCV) 2024.
+</ul>
+
+<ul>
+
+<ul>
+	<li>
 		[6/2024] One paper was accepted by International Journal of Surgery (IF: 15.3). Title: Digital Assessment of Tertiary Lymphoid Structures and Therapeutic Responses in Gastric Cancer: A Multi-Centric Retrospective Study
 </ul>
 
@@ -387,7 +394,7 @@
 	</ul>
 	<ul>
 	<li>
-		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10668251/" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
+		<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Huang_ConSlide_Asynchronous_Hierarchical_Interaction_Transformer_with_Breakup-Reorganize_Rehearsal_for_Continual_ICCV_2023_paper.pdf" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
 		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, <b>Yuming Jiang</b>, Lequan Yu.<br>
 		<em>Proceedings of the IEEE/CVF International Conference on Computer Vision</em>, 2023.</br>
 	</li>
