--- a/index.html
+++ b/index.html
@@ -726,20 +726,21 @@
 	</table>
 	<br>
 	
-	<b>Co-supervised Students:</b>
+	<b>Supervised and Visiting Students:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(w/ K.C. Yuen)</td></tr>
+		<tr><td> Hongqiu Wang (PhD Student at Hong Kong University of Science and Technology (HKUST)</td></tr>
 	</tbody>
 	</table>
+	
 	<br>
 	
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Jiacheng Xu (Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
+		<tr><td> Zihan Li (PhD sudent) (PhD at University of Washington)</td></tr>
 	</tbody>
 	</table>
 	<br>
@@ -816,6 +817,7 @@
 <li>	
 	<b>Program Committees:</b>
 	<br>
+	Faculty member of Biomedical Engineering and Sciences (SBES) program, Virginia Tech and Wake Forest University’s Graduate Schools <br>
 	Faculty member at the Atrium Health Wake Forest Baptist Comprehensive Cancer Center<br>
 	Member, the Center for Artificial Intelligence (CAI) at Wake Forest University<br>
 	Guest Associate Editor, Cancer Genetics and Onco-genomics, Frontiers in Genetics (Journal)<br>
@@ -898,6 +900,7 @@
 	Clinical Interventions in Aging <br>
 	Scientific Reports <br>
 	Science Bulletin <br>
+	Nature Communications <br>
 	<p style="margin-top:3px"></p>		
 </li>
 <br>
