--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
 	</li>
  
 </ul>
+
+<ul>
+	<li>
+		[6/2024] One paper was present as a poster at CAIR's AI in Healthcare Workshop. Title: Multimodal Radio-Pathomics and Interpretable Machine Learning for Predicting Immunotherapy Response in Gastric Cancer.
+
+</ul>
+
 <ul>
 	<li>
 		[6/2024] One paper was accepted by International Journal of Surgery (IF: 15.3). Title: Digital Assessment of Tertiary Lymphoid Structures and Therapeutic Responses in Gastric Cancer: A Multi-Centric Retrospective Study
