--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 <ul>
 	<li>
-		[6/2024] One paper was present as a poster at CAIR's AI in Healthcare Workshop. Title: Multimodal Radio-Pathomics and Interpretable Machine Learning for Predicting Immunotherapy Response in Gastric Cancer.
+		[6/2024] One paper was present at CAIR's AI in Healthcare Workshop. Title: Multimodal Radio-Pathomics and Interpretable Machine Learning for Predicting Immunotherapy Response in Gastric Cancer.
 
 </ul>
 <ul>
