--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
 </ul>
 <ul>
 	<li>
+		[7/2024] One paper was accepted as an oral paper presentation at the 110th Scientific Assembly and Annual Meeting of the Radiological Society of North America (2024), to be held December 1-5，in Chicago, Illinois.
+	</li>
+ 
+</ul>
+<ul>
+	<li>
 		[7/2024] One paper was accepted by The European Conference on Computer Vision (ECCV) 2024.
 	</li>
  
