--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </ul>
 <ul>
 	<li>
-		[7/2024] One paper was accepted as an oral paper presentation at the 110th Scientific Assembly and Annual Meeting of the Radiological Society of North America (2024), to be held December 1-5，in Chicago, Illinois.
+		[7/2024] One paper was accepted as an oral paper presentation at the 110th Scientific Assembly and Annual Meeting of the Radiological Society of North America (RSNA 2024), to be held December 1-5，in Chicago, Illinois.
 	</li>
  
 </ul>
