--- a/index.html
+++ b/index.html
@@ -258,6 +258,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://arxiv.org/pdf/2407.11448" target="_blank">cDP-MIL: Robust Multiple Instance Learning via Cascaded Dirichlet Process</a><br>
+		Yihang Chen, Tsai Hor Chan, Guosheng Yin, Yuming Jiang, Lequan Yu </b>.<br>
+		<em>The European Conference on Computer Vision (ECCV) </em>, 2024. </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://jitc.bmj.com/content/12/5/e008927?rss=1" target="_blank">Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer</a><br>
 		Zhen Han, Zhicheng Zhang, Xianqi Yang, Zhe Li, Shengtian Sang, Md Tauhidul Islam, Alyssa A Guo, Zihan Li, Xiaoyan Wang, Jing Wang, Taojun Zhang, Zepang Sun, Lequan Yu, Wei Wang, Wenjun Xiong, Guoxin Li, and <b>Yuming Jiang</b>.<br>
 		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024. (Impact Factor: 10.9)</br>
