--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 	<ul>
 	<li>
 		<a href="https://arxiv.org/pdf/2407.11448" target="_blank">cDP-MIL: Robust Multiple Instance Learning via Cascaded Dirichlet Process</a><br>
-		Yihang Chen, Tsai Hor Chan, Guosheng Yin, Yuming Jiang, Lequan Yu </b>.<br>
+		Yihang Chen, Tsai Hor Chan, Guosheng Yin, <b>Yuming Jiang</b>,  Lequan Yu </b>.<br>
 		<em>The European Conference on Computer Vision (ECCV) </em>, 2024. </br>
 	</li>
 	</ul>
