--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[8/2024] One paper was accepted by EBioMedicine (Impact Factor: 9.7). Title: Virtual Multiplexed Immunofluorescence Staining from Non-antibody-stained Fluorescence Imaging for Gastric Cancer Prognosis.
+	</li>
+</ul>
+<ul>
+	<li>
 		[7/2024] One paper was accepted as an oral paper presentation at the 110th Scientific Assembly and Annual Meeting of the Radiological Society of North America (RSNA 2024), to be held December 1-5，in Chicago, Illinois.
 	</li>
  
@@ -166,7 +171,7 @@
 
 <ul>
 	<li>
-		[6/2024] One paper was accepted by International Journal of Surgery (IF: 15.3). Title: Digital Assessment of Tertiary Lymphoid Structures and Therapeutic Responses in Gastric Cancer: A Multi-Centric Retrospective Study
+		[6/2024] One paper was accepted by International Journal of Surgery (Impact Factor: 15.3). Title: Digital Assessment of Tertiary Lymphoid Structures and Therapeutic Responses in Gastric Cancer: A Multi-Centric Retrospective Study
 </ul>
 
 <ul>
@@ -181,7 +186,7 @@
 </ul>
 <ul>
 	<li>
-		[4/2024] One paper was accepted by The Journal for ImmunoTherapy of Cancer (IF: 10.9). Title: Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer.
+		[4/2024] One paper was accepted by The Journal for ImmunoTherapy of Cancer (Impact Factor: 10.9). Title: Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer.
 	</li>
 </ul>
 <ul>
@@ -196,7 +201,7 @@
 </ul>
 <ul>
 	<li>
-		[3/2024] One paper was accepted by The Journal of Clinical Investigation (IF: 15.9). 
+		[3/2024] One paper was accepted by The Journal of Clinical Investigation (Impact Factor: 15.9). 
 	</li>
 </ul>
 <ul>
@@ -211,7 +216,7 @@
 </ul>
 <ul>
 	<li>
-		[10/2023] One paper was accepted by The Journal for ImmunoTherapy of Cancer (IF: 10.9).
+		[10/2023] One paper was accepted by The Journal for ImmunoTherapy of Cancer (Impact Factor: 10.9).
 	</li>	
 </ul>
 <ul>
